--- a/src/components/BudgetDetailsEstimator/index.css
+++ b/src/components/BudgetDetailsEstimator/index.css
@@ -1,12 +1,12 @@
 .budget-estimator-container {
-  height:100vh;
   display:flex;
+  min-height: 100%;
   flex-direction:column;
   justify-content: center;
   align-items:center; 
-  background: #bdc3c7; 
-  background: -webkit-linear-gradient(to right, #2c3e50, #bdc3c7);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #2c3e50, #bdc3c7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-image: url("https://res.cloudinary.com/imphanimurari/image/upload/v1621760961/BudgetEstimator/gradienta-bKESVqfxass-unsplash_pzt6me.jpg");
+  background-size: cover;
+  height: 100vh;
 }
 
 .budget-estimator-heading {
@@ -18,7 +18,6 @@
 
 
 .budget-inside-container{
-
   background-color: White;
   border-top-left-radius : 10px;
   border-top-right-radius:10px;
