--- a/src/components/BudgetItemsDetails/index.css
+++ b/src/components/BudgetItemsDetails/index.css
@@ -1,9 +1,28 @@
 
 .budget-item-container {
+
     display: flex;
+    width: 90%;
     justify-content: space-between;
-    background-color: red;
-    border : 1px solid grey;
+    padding: 10px;
+    border: 1px solid grey;
+    border-radius : 5px;
+    margin:5px
+}
+
+
+.button {
+    background: #bdc3c7; 
+    background: -webkit-linear-gradient(to right, #2c3e50, #bdc3c7);
+    background: linear-gradient(to right, #2c3e50, #bdc3c7);
+    color:white;
+    padding: 10px;
+    border: none;
     border-radius: 5px
 }
 
+.input {
+    padding:10px;
+    width:20%;
+    margin:5px;
+}
