fix the props change issue

--- a/src/components/BudgetDetailsEstimator/index.css
+++ b/src/components/BudgetDetailsEstimator/index.css
@@ -22,5 +22,6 @@
   border-top-right-radius:10px;
   display: flex;
   flex-direction:column;
-  align-items:center
+  align-items:center;
+  padding: 10px;
 }
