--- a/src/components/BudgetItemsDetails/index.css
+++ b/src/components/BudgetItemsDetails/index.css
@@ -21,8 +21,10 @@
     border-radius: 5px
 }
 
-.input {
-    padding:10px;
-    width:20%;
-    margin:5px;
+.item-class {
+    background-color:green;
+}
+
+.table-row {
+    background-color: orange;
 }
