working on version 2

--- a/src/components/BudgetCalculations/index.css
+++ b/src/components/BudgetCalculations/index.css
@@ -1,6 +1,4 @@
 
-.budget-calculations-container {
-  border-radius: 5px;
-  border:1px solid grey;
-  border-radius: 5px
+.table-head {
+  border: 5px solid white;
 }
