--- a/src/components/BudgetDetailsComponent/index.css
+++ b/src/components/BudgetDetailsComponent/index.css
@@ -4,3 +4,27 @@
  margin-top: 15px;
 }
 
+.table-head {
+    border: 5px solid white;
+}
+
+.table-head-item {
+    text-align: center;
+}
+
+.no-items-found-text  {
+    font-size: 20px;
+}
+
+
+.items-not-added {
+    padding: 20px;
+    border-radius: 10px;
+    border : 1px solid  grey;
+    width:90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin:10px
+}
