--- a/src/components/BudgetDetailsEstimator/index.css
+++ b/src/components/BudgetDetailsEstimator/index.css
@@ -1,50 +1,46 @@
 .budget-estimator-container {
   background-image: url("https://res.cloudinary.com/imphanimurari/image/upload/v1621760961/BudgetEstimator/gradienta-bKESVqfxass-unsplash_pzt6me.jpg");
   background-size: cover;
-  height:100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  min-height: 100vh;
+  padding-bottom: 20px;
 }
 
 .budget-estimator-heading {
   color: white;
   font-family: cursive;
   font-weight: 900;
-  font-size : 40px
+  font-size : 40px;
+  padding-bottom: 15px;
 }
 
 
 @media screen and (max-width: 600px) {
   .budget-inside-container{
     background-color: White;
-    border-top-left-radius : 10px;
-    border-top-right-radius:10px;
+    border-radius:10px;
     display: flex;
     flex-direction:column;
     align-items:center;
   }
-
-  .budget-estimator-container {
-    padding-top:20%
-   }
 }
+
+
 
 @media screen and (min-width: 600px) {
   .budget-inside-container{
-    width:50%;
+    width:70%;
     display: flex;
     align-self: center;
     background-color: White;
-    border-top-left-radius : 20px;
-    border-top-right-radius:20px;
+    border-radius : 20px;
     display: flex;
     flex-direction:column;
     align-items:center;
   }
-
- 
 }
 
 
