--- a/src/components/BudgetItem/index.css
+++ b/src/components/BudgetItem/index.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 15px;
 }
 
 
@@ -19,7 +20,13 @@
         background: -webkit-linear-gradient(to right, #2c3e50, #bdc3c7);
         background: linear-gradient(to right, #2c3e50, #bdc3c7);
         color:white;
-        padding: 10px;
+        padding:15px;
         border: none;
         border-radius: 5px;
+}
+
+.budet-input-item-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
