--- a/src/components/BudgetCalculations/index.css
+++ b/src/components/BudgetCalculations/index.css
@@ -2,3 +2,18 @@
 .table-head {
   border: 5px solid white;
 }
+
+.budget-item {
+  font-weight: 900
+}
+
+.postive-deviation {
+  font-weight:  900;
+  color: #3bd40d
+}
+
+.negative-deviation {
+  font-weight:  900;
+  color: #fc0303
+}
+
