--- a/src/components/BudgetItemsDetails/index.css
+++ b/src/components/BudgetItemsDetails/index.css
@@ -20,3 +20,14 @@
     border: none;
     border-radius: 5px
 }
+
+
+.negative-deviation {
+    font-weight: 700;
+    color: #fc0303
+}
+
+.positive-deviation {
+    font-weight: 700;
+    color: #3bd40d
+}
