--- a/src/components/BudgetItem/index.css
+++ b/src/components/BudgetItem/index.css
@@ -1,11 +1,23 @@
-.budget-items-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 15px;
+
+@media screen and (max-width:768px )  {
+    .budget-items-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding-top:15px
+    }
 }
 
+@media screen and (min-width:768px )  {
+    .budget-items-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding-top:15px
+    }
+}
 
 .budget-input-container {
     border: none;
